Second version of design

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,12 +15,13 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#142b4d"
+            android:background="#2e3c4c"
             android:orientation="horizontal"
             android:paddingTop="4dp">
 
@@ -82,7 +83,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#142b4d"
+            android:background="#2e3c4c"
             android:orientation="horizontal"
             android:paddingBottom="4dp">
 
@@ -157,6 +158,14 @@
             android:textColor="@color/messageText"
             android:textSize="30sp"
             android:textStyle="italic" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/reset_button"
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -312,11 +321,13 @@
     </LinearLayout>
 
     <Button
+        android:id="@+id/reset_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerInParent="true"
-        android:layout_margin="20dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginTop="16dp"
         android:onClick="resetGame"
         android:text="New game"
         android:textSize="18sp" />
