--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="topScoreText">#bfeefe</color>
+    <color name="topScoreText">#b2dbf2</color>
     <color name="messageText">#56d5ff</color>
 
     <color name="fireScoreBg">#b3120f</color>
@@ -16,8 +16,8 @@
     <color name="waterScoreText">#bcecfc</color>
     <color name="airScoreText">#cfc7de</color>
 
-    <color name="fireButtonText">#920906</color>
-    <color name="earthButtonText">#4f2b27</color>
-    <color name="waterButtonText">#275283</color>
-    <color name="airButtonText">#3b2e56</color>
+    <color name="fireButtonText">#ccc</color>
+    <color name="earthButtonText">#ccc</color>
+    <color name="waterButtonText">#ccc</color>
+    <color name="airButtonText">#ccc</color>
 </resources>
